@@ -1,8 +1,5 @@
-v0.7.2
-	song properties (metadata)
-	hide/show playback buttons
-
 v0.8
+	song properties (metadata)
 	USE COMMAND_LIST_* for batch processes (i.e. remove, crop, add_*)
 		Add to > Next song, top, random
 	Stream support
